--- a/MyEduServer_IOCP/MyServer_IOCP/MyServer_IOCP/MyServer_IOCP.vcxproj
+++ b/MyEduServer_IOCP/MyServer_IOCP/MyServer_IOCP/MyServer_IOCP.vcxproj
@@ -92,6 +92,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -145,11 +146,20 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ClientSession.h" />
+    <ClInclude Include="Exception.h" />
+    <ClInclude Include="IOCPManager.h" />
+    <ClInclude Include="MyServer_IOCP.h" />
+    <ClInclude Include="SessionManager.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ClientSession.cpp" />
+    <ClCompile Include="Exception.cpp" />
+    <ClCompile Include="IOCPManager.cpp" />
     <ClCompile Include="MyServer_IOCP.cpp" />
+    <ClCompile Include="SessionManager.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
