--- a/MyEduServer_IOCP/MyServer_IOCP/MyServer_IOCP/MyServer_IOCP.vcxproj.filters
+++ b/MyEduServer_IOCP/MyServer_IOCP/MyServer_IOCP/MyServer_IOCP.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="Exception.h">
       <Filter>소스 파일\Utils</Filter>
     </ClInclude>
+    <ClInclude Include="FastSpinLock.h">
+      <Filter>소스 파일\Utils</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -63,6 +66,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Exception.cpp">
+      <Filter>소스 파일\Utils</Filter>
+    </ClCompile>
+    <ClCompile Include="FastSpinLock.cpp">
       <Filter>소스 파일\Utils</Filter>
     </ClCompile>
   </ItemGroup>
