--- a/MyEduServer_IOCP/MyServer_IOCP/MyServer_IOCP/MyServer_IOCP.vcxproj
+++ b/MyEduServer_IOCP/MyServer_IOCP/MyServer_IOCP/MyServer_IOCP.vcxproj
@@ -148,6 +148,7 @@
   <ItemGroup>
     <ClInclude Include="ClientSession.h" />
     <ClInclude Include="Exception.h" />
+    <ClInclude Include="FastSpinLock.h" />
     <ClInclude Include="IOCPManager.h" />
     <ClInclude Include="MyServer_IOCP.h" />
     <ClInclude Include="SessionManager.h" />
@@ -157,6 +158,7 @@
   <ItemGroup>
     <ClCompile Include="ClientSession.cpp" />
     <ClCompile Include="Exception.cpp" />
+    <ClCompile Include="FastSpinLock.cpp" />
     <ClCompile Include="IOCPManager.cpp" />
     <ClCompile Include="MyServer_IOCP.cpp" />
     <ClCompile Include="SessionManager.cpp" />
